--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,13 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.10.1</version>
+    </dependency>
   </dependencies>
+
   <build>
     <plugins>
       <plugin>
